JPA Repository refactor Game Player User