@@ -10,37 +10,78 @@ import java.util.List;
 public class GameLogic {
 
    public static boolean validateMove(Game game, Move move) {
-      boolean condition1 = game.getBoard().getCell(move.bigPosition().getRow(), move.bigPosition().getColumn(), move.smallPosition().getRow(), move.smallPosition().getColumn()) == '_';
-      boolean condition2 = game.getCurrentPlayer().equals(move.player());
-      boolean condition3 = game.getBoard().getActiveBoardPositions().contains(move.bigPosition());
+      boolean condition1 = game.getBoard().getCell(
+              move.bigPosition().getRow(),
+              move.bigPosition().getColumn(),
+              move.smallPosition().getRow(),
+              move.smallPosition().getColumn()
+      ) == '_';
+
+      Player currentPlayer = game.getCurrentPlayerAsPlayer();
+      boolean condition2 = currentPlayer != null && currentPlayer.equals(move.player());
+
+      boolean condition3 = game.getBoard()
+              .getActiveBoardPositions()
+              .contains(move.bigPosition());
+
       return condition1 && condition2 && condition3;
    }
 
    public static void applyMove(Game game, Move move) {
-      game.getBoard().makeMove(move.player().getCharacter(), move.bigPosition(), move.smallPosition());
+      game.getBoard().makeMove(
+              move.player().getCharacter(),
+              move.bigPosition(),
+              move.smallPosition()
+      );
    }
 
    public static Player getWinningPlayer(Game game) {
       Character winningCharacter = game.getBoard().getWinningCharacter();
-      if (winningCharacter == null) return null;
-      if (winningCharacter == 'D') {
-         return game.getPlayers().stream().max(Comparator.comparing(player -> game.getBoard().getNumberOfSmallWinsByChar(player.getCharacter()))).get();
+
+      if (winningCharacter == null) {
+         return null;
       }
-      return game.getPlayers().stream().filter(player -> player.getCharacter().equals(winningCharacter)).findFirst().get();
+
+      if (winningCharacter == 'D') {
+         return game.getPlayers()
+                 .stream()
+                 .max(Comparator.comparing(
+                         player -> game.getBoard().getNumberOfSmallWinsByChar(player.getCharacter())
+                 ))
+                 .orElse(null);
+      }
+
+      return game.getPlayers()
+              .stream()
+              .filter(player -> player.getCharacter().equals(winningCharacter))
+              .findFirst()
+              .orElse(null);
    }
 
    public static void setNextCurrentPlayer(Game game) {
       List<Player> players = game.getPlayers();
-      Player prevCurrentPlayer = game.getCurrentPlayer();
+      Player prevCurrentPlayer = game.getCurrentPlayerAsPlayer();
+
+      if (players == null || players.isEmpty()) {
+         game.setCurrentPlayer(null);
+         return;
+      }
+
+      if (prevCurrentPlayer == null) {
+         game.setCurrentPlayer(players.get(0).getUser());
+         return;
+      }
+
       int i = players.indexOf(prevCurrentPlayer);
 
       Player currentPlayer;
-      if (i + 1 == players.size()) {
-         currentPlayer = players.getFirst();
+      if (i == -1 || i + 1 == players.size()) {
+         currentPlayer = players.get(0);
       } else {
          currentPlayer = players.get(i + 1);
       }
-      game.setCurrentPlayer(currentPlayer);
+
+      game.setCurrentPlayer(currentPlayer.getUser());
    }
 
    public static void setActiveBoardFromMove(Move move, Game game) {
